# ml_hackathon_template

./: .bash_history  .gitconfig  .gitignore  Challenge.md  Dockerfile  LICENSE  README.md  requirements.txt
.julia/logs/: repl_history.jl
.ssh/: known_hosts
.vscode-server/data/: machineid
.vscode-server/data/Machine/: .connection-token-c722ca6c7eed3d7987c0d5c3df5c45f6b15e77d1  .onCreateCommandMarker  .postStartCommandMarker
.vscode-server/extensions/ms-python.python-2022.2.1924087327/: package.json
.vscode-server/extensions/ms-python.vscode-pylance-2022.3.3/: package.json
.vscode-server/extensions/ms-toolsai.jupyter-2022.2.1030672458/: package.json
.vscode-server/extensions/ms-toolsai.jupyter-keymap-1.0.0/: package.json
.vscode-server/extensions/ms-toolsai.jupyter-renderers-1.0.6/: package.json
eis/: EISDataIO.py  EquivalentCircuitModels.py  scoring.py  utils.py
environments/: Dockerfile  environment.yml  pyproject.toml
example_pipeline/: README.md  dvc.yaml
example_pipeline/stages/: classifier.py  parameter_guesser.py  score.py  test_train_split.py
notebooks/: eis_plot_and_ecm_fit_examples.ipynb  params_guess_scoring.ipynb  params_guess_wrong_ecm_scoring.ipynb
