[tool.poetry]
name = "eis"
version = "0.1.0"
description = ""
authors = [
    "Anoushka Bhutani <anoushkabhutani@gmail.com>",
    "Joachim Schaeffer <joachim.schaeffer@posteo.de>",
    "Masaki Adachi <masaki@robots.ox.ac.uk>",
    "Raymond Gasper <14928724+rgasper@users.noreply.github.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
jupyterlab = "^3.3.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.941"
pytest = "^7.1.0"
dvc = "^2.9.5"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
